--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,6 @@
             <version>2.0.1</version>
         </dependency>
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.7.7</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
@@ -101,9 +96,8 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>package</id>
-                        <configuration>
-                        </configuration>
+                        <id>build-wildfly-image</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>package</goal>
                         </goals>
