advanced table basic functionality done

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     ports:
       - "8080:8080"
       - "9990:9990"
+    volumes:
+      - wildfly_config:/opt/jboss/wildfly/standalone/configuration
     restart: unless-stopped
     depends_on:
       - postgres
@@ -34,6 +36,7 @@ services:
       - default
 volumes:
   wildfly_data:
+  wildfly_config:
 networks:
   default:
     driver: bridge
